Set up MySQL as the IDM repository

--- a/conf/boot/boot.properties
+++ b/conf/boot/boot.properties
@@ -51,8 +51,8 @@ openidm.scheduler.execute.persistent.schedules=true
 # the repo url and port (MSSQL = 1433, MYSQL = 3306, POSTGRES = 5432) ;
 # those can also be passed via java properties
 #
-# openidm.repo.host =
-# openidm.repo.port =
+openidm.repo.host = localhost
+openidm.repo.port = 3306
 
 # enables the statistics MBean for BoneCP. Enabling this will have a performance impact on BoneCP.
 openidm.bonecp.statistics.enabled=false
