Complete HRDB/CTDB connector configuration

--- a/conf/ui-configuration.json
+++ b/conf/ui-configuration.json
@@ -23,7 +23,6 @@
                 "iconPath" : "images/notifications/error.png"
             }
         },
-        "defaultNotificationType" : "info",
-        "logoutUrl" : ""
+        "defaultNotificationType" : "info"
     }
 }
